@@ -1,3 +1,9 @@
+2006-07-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf.c (elf_modify_segment_map): Delete empty PT_LOAD segments.
+	* elf32-xtensa.c (elf_xtensa_modify_segment_map): Delete.
+	(define elf_backend_modify_segment_map): Don't define.
+
 2006-07-25  Thiemo Seufer  <ths@networkno.de>
 
 	* elfxx-mips.c (_bfd_mips_elf_merge_private_bfd_data): Allow
